<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bruger.slagshots.JoinGameActivity"
    tools:showIn="@layout/activity_join_game"
    android:background="#3e7fe8">


    <EditText
        android:id="@+id/editText"
        android:layout_width="225dp"
        android:layout_height="63dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/title_activity_enter_code"
        android:textColor="#fffb1c"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColorHint="#fffb1c"
        android:textSize="11pt"
        android:backgroundTint="@android:color/black"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="224dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.507" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_gamepin2"
        android:textStyle="bold"
        android:textColor="#fffb1c"
        android:textSize="13pt"
        android:textAlignment="center"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="78dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/find_game_button"
        android:layout_width="147dp"
        android:layout_height="73dp"
        android:text="@string/title_activity_find_game"
        android:textStyle="bold"
        android:textColor="#fffb1c"
        android:textSize="24sp"
        android:background="@drawable/button_border"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="123dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.471" />
</android.support.constraint.ConstraintLayout>
