<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3e7fe8"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bruger.slagshots.NewGameActivity">
    tools:showIn="@layout/activity_new_game">

    <Button
        android:id="@+id/afbryd_spil_button"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:layout_marginBottom="122dp"
        android:background="@drawable/button_border"
        android:text="@string/title_activity_cancel_game"
        android:textColor="#fffb1c"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_spil_button"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="139dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="1dp"
        android:text="@string/title_activity_gamepin"
        android:textColor="#fffb1c"
        android:textSize="12pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="144dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:text="@string/title_activity_players"
        android:textAlignment="center"
        android:textColor="#fffb1c"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamepin"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/start_spil_button"
        android:layout_width="164dp"
        android:layout_height="0dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/button_border"
        android:text="@string/title_activity_start_game"
        android:textColor="#fffb1c"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/afbryd_spil_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="184dp"
        android:layout_height="0dp"
        android:layout_marginBottom="60dp"
        android:text="1.   Elias
                 2.   Frederik"
        android:textColor="#fffb1c"
        android:textSize="9pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/start_spil_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/title_activity_give_code"
        android:textAlignment="center"
        android:textColor="#fffb1c"
        android:textSize="7pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gamepin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/gamepin"
        android:layout_width="222dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:textAlignment="center"
        android:textColor="#fffb1c"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</android.support.constraint.ConstraintLayout>
